# cybersecurity_exp_2024_spring

./: LICENSE  readme.txt
bellovin_merritt/: Cargo.toml
bellovin_merritt/src/: lib.rs  protocol.rs  utils.rs
homomorphic/: Cargo.toml
homomorphic/src/: main.rs  paillier.rs
report/: Report.md
stack/: exploit.c  run.sh  target.c
web/victim/: app.py  test.db
web/victim/templates/: index.html  index_csrf.html
web/web-security-exercise/: app.py  test.db
web/web-security-exercise/templates/: attack.html  index.html  index_insecure.html
