[package]
name = "bellovin_merritt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
rust-crypto = "0.2.36"
hex = "0.4.3"
rand = "0.8.5"
rsa = "0.9.6"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
protobuf = "3.4.0"
ring = "0.17.7"
lazy_static = "1.5.0"

[dependencies.socket2]
version = "0.5.7"
features = ["all"]